--- a/login.html
+++ b/login.html
@@ -100,7 +100,7 @@ loginBtn.addEventListener('click', async (e) => {
     };
 
     sessionStorage.setItem('loggedInUser', JSON.stringify(safeUser));
-    window.location.href = 'webpage.html';
+    window.location.href = 'index.html';
 
   } catch (err) {
     console.error(err);
