--- a/login.html
+++ b/login.html
@@ -30,12 +30,12 @@
     <div id="error" class="error" role="alert" aria-live="assertive" style="display:none;"></div>
 
     <div class="small">
-      Αυτό το demo κάνει έλεγχο στο πελάτη (client-side). Για ασφαλή χρήση σε πραγματικό περιβάλλον χρειάζεστε server-side authentication και αποθήκευση hashed κωδικών.
+      Στείλτε μου μηνυμα αν ξεχάσατε τον κωδικό σας (αν δεν απαντήσω αλλα είμαι online απλα στείλτε πάλι)
     </div>
   </div>
 
 <script>
-/* Simple client-side login (demo only) */
+
 const loginBtn = document.getElementById('loginBtn');
 const errEl = document.getElementById('error');
 
