--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <a href="https://1gym-pylaias.thess.sch.gr" target="_blank">Σελίδα Σχολείου</a>
   <a href="https://1gym-pylaias.thess.sch.gr/category/anakoinoseis-gia-mathites" target="_blank">Ανακοινώσεις Σχολείου</a>
   <a href="https://streamable.com/lf027o" target="_blank">Δωρεάν 500€</a>
+  <a href="https://www.youtube.com/shorts/Vqz3T9I3aXA" target="_blank">Για θεραπεία</a>
 </div>
 
 <script>
